@@ -1,2 +1,7 @@
 # TravelingSimulator
 TravelingSImulator
+
+Require Local JavaFX 1.8 Library and Set VM Argument
+```
+--module-path $PATH_TO_FX --add-modules=javafx.controls
+```
